--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.6",
         "spatie/laravel-tags": "^4.9",
-        "tymon/jwt-auth": "^2.1"
+        "tymon/jwt-auth": "^2.1",
+        "ext-mysql_xdevapi": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
